add a progress summary

--- a/w6.html
+++ b/w6.html
@@ -58,9 +58,7 @@
                 </h2>
                 <p>
                     <br><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nam vero cum! Dolor, illo qui nesciunt sunt doloribus saepe id!
-                    <br><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae tempore, earum natus ipsum temporibus assumenda ducimus eveniet harum modi saepe?
+                    Well, I really liked the works chosen by my friends, especially that of lovers. Although I could notice a special admiration or taste for the works of Frida Khalo. Personally, I don't like his works so much but I could see that my friends do. But thanks to his exhibitions I was able to analyze the works in a better way, as well as being able to make a deeper analysis of them. I really liked Van Gohg's starry night show, it is my favorite work of all history, I know it is not the most technical, but it reflects a lot for me and what I am, I love it.
                     <br><br>
                 </p>
             </div>
@@ -84,17 +82,8 @@
                 </h2>
                 <p>
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    Well, this progress was quite nice for me because I was the first in college, so I was able to meet people from different ways of seeing things, and among those things is art, I really liked what is about the subject is very entertaining and It helps me to awaken that artistic side that I thought was asleep. It was incredible for me to even make this portfolio since I was able to test my artistic and technical skills in programming and in art.
                     <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
                 </p>
             </div>
         </div>
