fix responsive design

--- a/w6.html
+++ b/w6.html
@@ -84,6 +84,7 @@
                     <br><br>
                     Well, this progress was quite nice for me because I was the first in college, so I was able to meet people from different ways of seeing things, and among those things is art, I really liked what is about the subject is very entertaining and It helps me to awaken that artistic side that I thought was asleep. It was incredible for me to even make this portfolio since I was able to test my artistic and technical skills in programming and in art.
                     <br><br>
+                    Put this picture cause i love it.
                 </p>
             </div>
         </div>
@@ -93,7 +94,6 @@
     <!-- act 3 -->
     <section class="bio">
         <div class="bio__content">
-
             <div class="col left-col">
                 <div class="bio__card">
                     <img src="img/artdev/progress1/w6_videosSummary.jpeg" alt="summary">
@@ -106,17 +106,8 @@
                 </h2>
                 <p>
                     <br><br>
-                    My name is Washington Yandun, am a software engineering student. I always love tech and science
-                    thats why decided to study something related to that.
-                    Another fact of me is that i enjoy art, specially if it is made
-                    with a bit of tech o
-                    coding. There is a part of software engineering wich i like so bad. Its called Generative Art. It
-                    merge art and
-                    programming so im working on it. Also i love math, AI , music and videogames (make and play them).
+                    el video de la semana,
                     <br><br>
-                    I live in
-                    the north of Quito,
-                    Ecuador with my family.
                 </p>
             </div>
         </div>
