finish all progress one and it is ready for deployment

--- a/w6.html
+++ b/w6.html
@@ -106,7 +106,13 @@
                 </h2>
                 <p>
                     <br><br>
-                    el video de la semana,
+                    Sarah Sze, is a contemporary visual artist who plays with her, we will be able to see the mixture of artistic languages ​​to create what she calls "multimedia landscapes".
+                    Where does the artist's work begin?
+                    It begin when the artist found a kind of inspiring sense. Like a prick. And also when teh situation is needed. 
+                    Where it goes?
+                    Goes towards the expression or the solution of something is a way of communicating with oneself
+                    what is it connected to?
+                    Is connected with the emotions, sensations, feelings and situations of each person
                     <br><br>
                 </p>
             </div>
