--- a/w1.html
+++ b/w1.html
@@ -39,7 +39,7 @@
 
 
     <!-- act1 -->
-    <section class="bio" id="bio">
+    <section class="bio">
         <div class="bio__title">
             <h2 class="title">Week 1</h2>
         </div>
@@ -75,7 +75,7 @@
 
 
     <!-- act 2 -->
-    <section class="bio" id="bio">
+    <section class="bio">
         <div class="bio__content">
 
             <div class="col left-col">
@@ -107,7 +107,7 @@
     </section>
 
     <!-- footer -->
-    <footer class="footer" id="footer">
+    <footer class="footer" >
         <span class="footer-title">
             WMYM
         </span>
