--- a/w2.html
+++ b/w2.html
@@ -39,7 +39,7 @@
 
 
     <!-- act1 -->
-    <section class="bio" id="bio">
+    <section class="bio">
         <div class="bio__title">
             <h2 class="title">Week 2</h2>
         </div>
@@ -81,7 +81,7 @@
 
 
     <!-- act 2 -->
-    <section class="bio" id="bio">
+    <section class="bio">
         <div class="bio__content">
 
             <div class="col left-col">
@@ -123,7 +123,7 @@
     </section>
 
     <!-- footer -->
-    <footer class="footer" id="footer">
+    <footer class="footer">
         <span class="footer-title">
             WMYM
         </span>
