--- a/w3.html
+++ b/w3.html
@@ -39,7 +39,7 @@
 
 
     <!-- act1 -->
-    <section class="bio" id="bio">
+    <section class="bio">
         <div class="bio__title">
             <h2 class="title">Week 3</h2>
         </div>
@@ -74,7 +74,7 @@
 
 
     <!-- act 2 -->
-    <section class="bio" id="bio">
+    <section class="bio">
         <div class="bio__content">
 
             <div class="col left-col">
@@ -108,7 +108,7 @@
 
 
     <!-- footer -->
-    <footer class="footer" id="footer">
+    <footer class="footer">
         <span class="footer-title">
             WMYM
         </span>
