--- a/w4.html
+++ b/w4.html
@@ -153,7 +153,7 @@
     </section>
 
     <!-- footer -->
-    <footer class="footer" id="footer">
+    <footer class="footer">
         <span class="footer-title">
             WMYM
         </span>
