delete temporaly folder distribution for dev

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         I
                     </h3>
                     <p>
-                        Progress I. 5 weeks.
+                        Progress I. 1 - 6 wk.
                     </p>
                 </div>
             </a>
@@ -159,7 +159,7 @@
                         II
                     </h3>
                     <p>
-                        Progress I. 4 weeks.
+                        Progress I. 7 - 12 wk.
                     </p>
                 </div>
             </a>
@@ -175,7 +175,7 @@
                         III
                     </h3>
                     <p>
-                        Progress I. 4 weeks.
+                        Progress I. 13 - 16 weeks.
                     </p>
                 </div>
             </a>
