--- a/progress2.html
+++ b/progress2.html
@@ -42,101 +42,125 @@
     <!-- galery -->
     <div class="galery-row">
         <div class="column">
-            <a href="w1.html" class="image">
+            <a href="w7.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w1_disorder.jpg" alt="diorder">
                 <div class="image__overlay">
-                    <div class="image__title">1</div>
+                    <div class="image__title">7</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
-            <a href="w1.html" class="image">
+            <a href="w7.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w1_video.jpg" alt="">
                 <div class="image__overlay">
-                    <div class="image__title">1</div>
+                    <div class="image__title">7</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
         </div>
 
         <div class="column">
-            <a href="w2.html" class="image">
+            <a href="w8.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w2_udla.jpeg" alt="udla">
                 <div class="image__overlay">
-                    <div class="image__title">2</div>
+                    <div class="image__title">8</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
-            <a href="w2.html" class="image">
+            <a href="w8.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w2_hearPhones.jpg" alt="hearphones">
                 <div class="image__overlay">
-                    <div class="image__title">2</div>
+                    <div class="image__title">8</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
         </div>
 
         <div class="column">
-            <a href="w3.html" class="image">
+            <a href="w9.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w3_videoSummary.jpg" alt="videoSummary">
                 <div class="image__overlay">
-                    <div class="image__title">3</div>
+                    <div class="image__title">9</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
-            <a href="w3.html" class="image">
+            <a href="w9.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w3_question.jpg" alt="questions">
                 <div class="image__overlay">
-                    <div class="image__title">3</div>
+                    <div class="image__title">9</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
         </div>
 
         <div class="column">
-            <a href="w4.html" class="image">
+            <a href="w10.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w4_video.jpg" alt="videoSummary">
                 <div class="image__overlay">
-                    <div class="image__title">4</div>
+                    <div class="image__title">10</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
-            <a href="w4.html" class="image">
+            <a href="w10.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w4_questions.jpg" alt="videoQuestions">
                 <div class="image__overlay">
-                    <div class="image__title">4</div>
+                    <div class="image__title">10</div>
                     <p class="image__text">Wk</p>
 
                 </div>
             </a>
-            <a href="w4.html" class="image">
+            <a href="w10.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w4_oralPresentation.jpg"
                     alt="La persistencia de la memoria">
                 <div class="image__overlay">
-                    <div class="image__title">4</div>
+                    <div class="image__title">10</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
         </div>
 
         <div class="column">
-            <a href="w5.html" class="image">
+            <a href="w11.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w5_summary.jpg" alt="videoSummary">
                 <div class="image__overlay">
-                    <div class="image__title">5</div>
+                    <div class="image__title">11</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
-            <a href="w5.html" class="image">
+            <a href="w11.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w5_soundImg.jpg" alt="sound">
                 <div class="image__overlay">
-                    <div class="image__title">5</div>
+                    <div class="image__title">11</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
-            <a href="w5.html" class="image">
+            <a href="w11.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w5_project.jpg" alt="project">
                 <div class="image__overlay">
-                    <div class="image__title">5</div>
+                    <div class="image__title">11</div>
+                    <p class="image__text">Wk</p>
+                </div>
+            </a>
+        </div>
+
+        <div class="column">
+            <a href="w12.html" class="image">
+                <img class="image__img" src="img/artdev/progress1/w5_summary.jpg" alt="videoSummary">
+                <div class="image__overlay">
+                    <div class="image__title">12</div>
+                    <p class="image__text">Wk</p>
+                </div>
+            </a>
+            <a href="w12.html" class="image">
+                <img class="image__img" src="img/artdev/progress1/w5_soundImg.jpg" alt="sound">
+                <div class="image__overlay">
+                    <div class="image__title">12</div>
+                    <p class="image__text">Wk</p>
+                </div>
+            </a>
+            <a href="w7.html" class="image">
+                <img class="image__img" src="img/artdev/progress1/w5_project.jpg" alt="project">
+                <div class="image__overlay">
+                    <div class="image__title">12</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
