--- a/progress1.html
+++ b/progress1.html
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar__links">
             <a href="index.html">Home</a>
-            <a href="progress1.html">P.II</a>
+            <a href="progress2.html">P.II</a>
             <a href="progress3.html">P.III</a>
         </div>
     </header>
@@ -43,7 +43,7 @@
     <div class="galery-row">
         <div class="column">
             <a href="w1.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w1_disorder.jpg" alt="diorder">
+                <img class="image__img" src="img/artdev/progress1/w1_disorder.jpg" alt="disorder">
                 <div class="image__overlay">
                     <div class="image__title">1</div>
                     <p class="image__text">Wk</p>
