--- a/w7.html
+++ b/w7.html
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar__links">
             <a href="index.html">Home</a>
-            <a href="progress1.html">P.I</a>
+            <a href="progress2.html">P.II</a>
         </div>
     </header>
 
@@ -41,33 +41,33 @@
     <!-- act1 -->
     <section class="bio">
         <div class="bio__title">
-            <h2 class="title">Week 1</h2>
+            <h2 class="title">Week 7</h2>
         </div>
 
         <div class="bio__content">
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w1_disorder.jpg" alt="My head disorder">
+                    <img src="img/artdev/progress2/w7_banana_age.jpeg" alt="banana">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Disorder & Chaos in my mind
+                    Art in the Age of Instagram
                 </h2>
                 <p>
                     <br><br>
-                    This photograph represents the disorder, anger and frustration that I feel provided by all the
-                    changes are happening in my,
-                    academic and social life. Maybe those feelings are consequences for the pandemic situation that all
-                    the world are experimenting on.
+                    Am in doubt about this age of art. I love the way the people arround the owrld can comunicate
+                    their ideas, their art and feelings by posting in instagram for example.
+                    But i strongly disgree with the concept of art the people in this age has about the art.
+                    I don't like the art of this age. I think some of the art os the <b>RENACENTIST</b> age is way
+                    better no comparation between them.
                     <br><br>
-                    Maybe I just need some time to roder my ideas and feelings to be in a better shape... Talking
-                    mentally...
+                    I belive that in the past the people who did art had more ability than people on my age.
                     <br><br>
-                    I need to find myself to improve my life and i think making new friends and meeting new people are
-                    good ways to do that. I this subject is an excellent occasion for doing that.
+                    Perhaps i think the posibility of communication on this age is a extremely useful tool to make
+                    art something new and better.
                 </p>
             </div>
         </div>
@@ -80,7 +80,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w1_video.jpg" alt="Me">
+                    <img src="img/artdev/progress2/w7_summary.jpeg" alt="summary">
                 </div>
             </div>
 
@@ -90,24 +90,21 @@
                 </h2>
                 <p>
                     <br><br>
-                    The videos from this week show us the importance of art in life.
-                    In addition, it gives us the concept of "creative processes", key to understanding art and starting
-                    thinking
-                    like an artist.
+                    The videos from this week show us the importance of around the ages of humanity and the current
+                    state of the art in the modern age.
+                    In addition, those videos gives some concepts of the modern art and how it is shared on these days,
+                    that are key ideas in order to understand how the people sense the art now.
+                    Also Jia Jia Fei say how the interaction between people in social media affect the sense of the art
+                    and how we can percive them.
                     <br><br>
-                    It also shows how personal identity is strongly linked to art, it serves for the
-                    self-knowledge.
-                    On the other hand, he shows us an example of that trip of some teachers, which is significant for my
-                    own trip.
-                    <br><br>
-                    I did not get on well with art at first but with this subject i think that will change.
+                    Those videos are really useful to understand Why and How art has changed on the time.
                 </p>
             </div>
         </div>
     </section>
 
     <!-- footer -->
-    <footer class="footer" >
+    <footer class="footer">
         <span class="footer-title">
             WMYM
         </span>
