--- a/progress2.html
+++ b/progress2.html
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar__links">
             <a href="index.html">Home</a>
-            <a href="progress1.html">P.II</a>
+            <a href="progress1.html">P.I</a>
             <a href="progress3.html">P.III</a>
         </div>
     </header>
@@ -43,14 +43,14 @@
     <div class="galery-row">
         <div class="column">
             <a href="w7.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w1_disorder.jpg" alt="diorder">
+                <img class="image__img" src="img/artdev/progress2/w7_banana_age.jpeg" alt="banana">
                 <div class="image__overlay">
                     <div class="image__title">7</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w7.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w1_video.jpg" alt="">
+                <img class="image__img" src="img/artdev/progress2/w7_summary.jpeg" alt="black people">
                 <div class="image__overlay">
                     <div class="image__title">7</div>
                     <p class="image__text">Wk</p>
@@ -144,21 +144,21 @@
 
         <div class="column">
             <a href="w12.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w5_summary.jpg" alt="videoSummary">
+                <img class="image__img" src="img/artdev/progress1/w6_expoSummary.jpeg" alt="kahlo">
+                <div class="image__overlay">
+                    <div class="image__title">12</div>
+                    <p class="image__text">Wk</p>
+                </div>
+            </a>
+            <a href="w6.html" class="image">
+                <img class="image__img" src="img/artdev/progress1/w6_progressSummary.jpeg" alt="japan">
                 <div class="image__overlay">
                     <div class="image__title">12</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w12.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w5_soundImg.jpg" alt="sound">
-                <div class="image__overlay">
-                    <div class="image__title">12</div>
-                    <p class="image__text">Wk</p>
-                </div>
-            </a>
-            <a href="w7.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w5_project.jpg" alt="project">
+                <img class="image__img" src="img/artdev/progress1/w6_videosSummary.jpeg" alt="art">
                 <div class="image__overlay">
                     <div class="image__title">12</div>
                     <p class="image__text">Wk</p>
