--- a/progress1.html
+++ b/progress1.html
@@ -39,8 +39,8 @@
     </header>
 
 
-    <!-- galery -->
-    <div class="galery-row">
+    <!-- gallery -->
+    <div class="gallery-row">
         <div class="column">
             <a href="w1.html" class="image">
                 <img class="image__img" src="img/artdev/progress1/w1_disorder.jpg" alt="disorder">
