--- a/progress2.html
+++ b/progress2.html
@@ -39,8 +39,8 @@
     </header>
 
 
-    <!-- galery -->
-    <div class="galery-row">
+    <!-- gallery -->
+    <div class="gallery-row">
         <div class="column">
             <a href="w7.html" class="image">
                 <img class="image__img" src="img/artdev/progress2/w7_banana_age.jpeg" alt="banana">
@@ -60,14 +60,14 @@
 
         <div class="column">
             <a href="w8.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w2_udla.jpeg" alt="udla">
+                <img class="image__img" src="img/artdev/progress2/w7_summary.jpeg" alt="udla">
                 <div class="image__overlay">
                     <div class="image__title">8</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w8.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w2_hearPhones.jpg" alt="hearphones">
+                <img class="image__img" src="img/artdev/progress2/w8_opinion.jpeg" alt="hidden">
                 <div class="image__overlay">
                     <div class="image__title">8</div>
                     <p class="image__text">Wk</p>
