--- a/w8.html
+++ b/w8.html
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar__links">
             <a href="index.html">Home</a>
-            <a href="progress1.html">P.I</a>
+            <a href="progress2.html">P.II</a>
         </div>
     </header>
 
@@ -41,13 +41,13 @@
     <!-- act1 -->
     <section class="bio">
         <div class="bio__title">
-            <h2 class="title">Week 2</h2>
+            <h2 class="title">Week 8</h2>
         </div>
         <div class="bio__content">
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w2_summary.jpg" alt="videoSS">
+                    <img src="img/artdev/progress2/w8_summary.jpeg" alt="summary">
                 </div>
             </div>
 
@@ -57,23 +57,17 @@
                 </h2>
                 <p>
                     <br><br>
-                    Well for me was something quite important to learn about artistic appreciation, especially the first
-                    two steps that are observe and percieve. Was very important since it is something essential in
-                    people's lives
-                    to be able to
-                    appreciate things differently, especially art.
+                    Well for me was something important to learn that athe word <b>ART</b>
+                    has a lot of interpretations and ways to be expressed, like movies, dancing, Photography,
+                    comics, literature, theatre.
                     <br><br>
-                    Sometimes we do not notice where you can see art or how
-                    it manifests but it
-                    is important to recognize it even in those places, situations or things in which we do not think
-                    that some type of
-                    artistic expression could be present on a day-to-day basis.
-                    Like this foto. Some people may think is art and other people not.
+                    All those actions are a languages to express art.
+                    Also the videos tell us about some important examples of those ways to express art
+                    some of Ecuador and other outside of here.
                     <br><br>
-                    I think that as people and professionals is
-                    essential.
+                    As well i learned that movies are a comination of a lot of art languages like photography or
+                    dancing.
                     <br><br>
-
                 </p>
             </div>
         </div>
@@ -86,36 +80,26 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w2_hearPhones.jpg" alt="HearPhones">
+                    <img src="img/artdev/progress2/w8_opinion.jpeg" alt="hidden">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Weekly Video Questions
+                    Weekly Opinion
                 </h2>
                 <p>
                     <br><br>
-                    Think about what moments in the last week you created a connection with some artistic expression.
+                    I love that artist put some hidden stuff in their art.
+                    I feel like a detective. It does not matterif there is a simple or internal feeling of the single
+                    artist or if it is a secret of hummanity.
+                    It is a plus to the art and the artist to do some like that
                     <br><br>
-                    I signed up for the Photography Club.
+                    Perhaps i think all the artist do that i belive that is an unconscious action of a human in order to
+                    express a feeling.
                     <br><br>
-                    Was
-                    What was it that triggered or started that connection?
-                    <br><br>
-                    Well, I had always liked how cameras work in social and scientific ways. Also love how a camera can
-                    capture reality with a totalyy different
-                    approach. So I decided to
-                    enter the club
-                    <br><br>
-                    What does that moment say about who you are as a person?
-                    <br><br>
-                    I think it represented my desire to learn about everything, especially art.
-                    How might that moment influence decisions about the near future ... let's say next week?
-                    <br><br>
-                    Well it fills my free time (which is no longer free haha), I have to take a lot of
-                    photos and that
-                    excites me
+                    I like the way people in the past hidden some of the "Lore" of their art i think it makes the
+                    artwork even more valuable. Love it.
                     <br><br>
                 </p>
             </div>
