--- a/progress2.html
+++ b/progress2.html
@@ -60,7 +60,7 @@
 
         <div class="column">
             <a href="w8.html" class="image">
-                <img class="image__img" src="img/artdev/progress2/w7_summary.jpeg" alt="udla">
+                <img class="image__img" src="img/artdev/progress2/w8_summary.jpeg" alt="udla">
                 <div class="image__overlay">
                     <div class="image__title">8</div>
                     <p class="image__text">Wk</p>
@@ -77,14 +77,14 @@
 
         <div class="column">
             <a href="w9.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w3_videoSummary.jpg" alt="videoSummary">
+                <img class="image__img" src="img/artdev/progress2/w9_myear.jpeg" alt="ear">
                 <div class="image__overlay">
                     <div class="image__title">9</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w9.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w3_question.jpg" alt="questions">
+                <img class="image__img" src="img/artdev/progress2/w9_summary.jpeg" alt="summary">
                 <div class="image__overlay">
                     <div class="image__title">9</div>
                     <p class="image__text">Wk</p>
