--- a/w9.html
+++ b/w9.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PI_w3</title>
+    <title>PII_w9</title>
     <!-- script file -->
     <script src="js/script.js" defer></script>
     <!-- style file -->
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar__links">
             <a href="index.html">Home</a>
-            <a href="progress1.html">P.I</a>
+            <a href="progress2.html">P.II</a>
         </div>
     </header>
 
@@ -41,32 +41,30 @@
     <!-- act1 -->
     <section class="bio">
         <div class="bio__title">
-            <h2 class="title">Week 3</h2>
+            <h2 class="title">Week 9</h2>
         </div>
         <div class="bio__content">
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w3_videoSummary.jpg" alt="My head disorder">
+                    <img src="img/artdev/progress2/w9_myear.jpeg" alt="My ear">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Weekly Video Summary
+                    What impact could your creative work have on society?
                 </h2>
                 <p>
-                    The videos tell us about various art situations both internationally and internally here in Ecuador,
-                    they give us a
-                    vision of what can be done with art and how it can break different barriers such as borders,
-                    stereotypes, prejudices and
-                    even physical limitations.
-                    <br><br>
-                    It was interesting to see how people can achieve so many things
-                    through art and the way
-                    they express themselves through it. The videos, in addition to the above mentioned, try to show us
-                    how much can be done
-                    in art, in so many different forms of it.
+                    I don't know if my creative work could have a reallyinpact on society or maybe yes. I depends on
+                    what craetive works we are talking about if it in only refering to my art process I belive no
+                    because i write some stories sometimes, i usually draw and i make some art on digitals platforms.
+                    Also i do photography. But i that stuff for <b>Me</b> i usually dont like to share those things
+                    cause i don't have people who are interested in those things.
+                    <br>
+                    But there are anoher creative work i do and it is more relationate to tech. I like to do creative
+                    things with tech and i think that stuff could have an impact on society. But those processes usually
+                    are not related to art.
                 </p>
             </div>
         </div>
@@ -79,28 +77,49 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w3_question.jpg" alt="Me">
+                    <img src="img/artdev/progress2/w9_summary.jpeg" alt="black">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Weekly Video Questions
+                    Weekly Video Summary
                 </h2>
                 <p>
                     <br><br>
-                    What was the video that most caught your attention and why?
+                    The videos of this week were really useful and powerful
                     <br><br>
-                    For me, the video that was the most interesting was the part number 4, why it makes us see
-                    that art
-                    It is a form of
-                    universal communication, regardless of religion, social status or different ethnicities of the
-                    towns that make art in
-                    In this sense, I find the work done by the group mentioned in the video very valuable. I
-                    excites me even more since
-                    have managed to use technological tools to make the impossible come true.
+                    Those videos were so important cause the speakers show us how important art is on society
+                    and in history.
+                    How we all can go down in history with our creativity and the art of that processes.
+                    As well the videos show how some people do process of art and creativity with small things and that
+                    is very useful to see because is inspiring to me to continue with my creative work even if it seems
+                    small or useless.
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- act 2 -->
+    <section class="bio">
+        <div class="bio__content">
+
+            <div class="col left-col">
+                <div class="bio__card">
+                    <img src="img/artdev/progress2/w9_revo.jpeg" alt="revo">
+                </div>
+            </div>
+
+            <div class="col right-col">
+                <h2 class="content-title">
+                    Can art correct history?
+                </h2>
+                <p>
                     <br><br>
-                    <b>Tech RULES!!!</b>
+                    I strongly can say <b>YES</b> it happened in the past.
+                    Why not in the present to make a better future?
+                    <br><br>
                 </p>
             </div>
         </div>
