--- a/w9.html
+++ b/w9.html
@@ -131,8 +131,9 @@
         <span class="footer-title">
             WMYM
         </span>
-        <a href="https://github.com/WashingtonYandun/Art-Human-Expression-Communication_Portfolio" target="_blank">Art
-            Portfolio</a>
+        <a href="https://github.com/WashingtonYandun/Art-Human-Expression-Communication_Portfolio" target="_blank">
+            Art Portfolio
+        </a>
     </footer>
 
 </body>
