--- a/progress2.html
+++ b/progress2.html
@@ -94,26 +94,18 @@
 
         <div class="column">
             <a href="w10.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w4_video.jpg" alt="videoSummary">
+                <img class="image__img" src="img/artdev/progress2/w10_summary.jpeg" alt="videoSummary">
                 <div class="image__overlay">
                     <div class="image__title">10</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w10.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w4_questions.jpg" alt="videoQuestions">
+                <img class="image__img" src="img/artdev/progress2/w10_guayasamin.jpeg" alt="el dictador">
                 <div class="image__overlay">
                     <div class="image__title">10</div>
                     <p class="image__text">Wk</p>
 
-                </div>
-            </a>
-            <a href="w10.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w4_oralPresentation.jpg"
-                    alt="La persistencia de la memoria">
-                <div class="image__overlay">
-                    <div class="image__title">10</div>
-                    <p class="image__text">Wk</p>
                 </div>
             </a>
         </div>
