--- a/w9.html
+++ b/w9.html
@@ -70,7 +70,6 @@
         </div>
     </section>
 
-
     <!-- act 2 -->
     <section class="bio">
         <div class="bio__content">
@@ -100,7 +99,6 @@
         </div>
     </section>
 
-
     <!-- act 2 -->
     <section class="bio">
         <div class="bio__content">
@@ -119,12 +117,12 @@
                     <br><br>
                     I strongly can say <b>YES</b> it happened in the past.
                     Why not in the present to make a better future?
+                    Im sure it, even more. It will.
                     <br><br>
                 </p>
             </div>
         </div>
     </section>
-
 
     <!-- footer -->
     <footer class="footer">
