--- a/w10.html
+++ b/w10.html
@@ -39,7 +39,7 @@
 
 
     <!-- act1 -->
-    <section class="bio" >
+    <section class="bio">
         <div class="bio__title">
             <h2 class="title">Week 4</h2>
         </div>
@@ -47,7 +47,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w4_video.jpg" alt="My head disorder">
+                    <img src="img/artdev/progress2/w10_summary.jpeg" alt="politics and art">
                 </div>
             </div>
 
@@ -57,17 +57,16 @@
                 </h2>
                 <p>
                     <br><br>
-                    This week's videos show us the way humans found art.
-                    And also these videos, show how the brain work for understanding what to select to be art.
-                    Is very interesting i never thought about it.
-                    The videos tells about how people interpret the beauty of things and how we relationate that with
-                    art.
-                    Also, it show us 3 ways of dedign for "making people happy"
+                    This week's videos show us the way humans make and see art everywhere.
+                    And How politics influence the art in some aspects of itself and how ot politics becomes a kind of
+                    inspiration for somo people.
+                    Identity and symbols overcome the beauty of art in this new social and public culture.
+                    The word "Freedom" and its concept reaches with force to people who with art try to fight against a
+                    system that they do not support or also to defend peace in the face a nonesene war.
                 </p>
             </div>
         </div>
     </section>
-
 
     <!-- act 2 -->
     <section class="bio">
@@ -75,78 +74,21 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w4_questions.jpg" alt="Me">
+                    <img src="img/artdev/progress2/w10_guayasamin.jpeg" alt="El dictador">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Weekly Video Questions
+                    What is the message of the work in relation to the political situation in the region?
                 </h2>
                 <p>
                     <br><br>
-                    This week's videos show us the importance of art. Is it necessary for something to be beautiful to
-                    be considered art?
-                    Why or why not?
-                    <br><br>
-                    I don't think something has to be beautiful to be considered art. And in fact, how are we going to
-                    define beauty, do
-                    they go hand in hand? Putting these two concepts in a single question brings up more questions
-                    without many answers. In
-                    my case and my definition of beauty and art. Something, it does not need to be considered beautiful
-                    to be art, I
-                    consider art a mathematical expression. It is beautiful, it may be how I could not. Dali works are
-                    considered art, are
-                    they beautiful? some, yes. I think that art goes in another direction of perception a little
-                    different from beauty,
-                    although sometimes, they can go hand in hand.
-                </p>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- act 3 -->
-    <section class="bio">
-        <div class="bio__title dali">
-            <h2 class="title daliT">
-                "La persistencia de la memoria"
-                -Salvador Dali-
-            </h2>
-        </div>
-
-        <div class="bio__content">
-
-            <div class="col left-col">
-                <div class="bio__card">
-                    <img src="img/artdev/progress1/w4_oralPresentation.jpg" alt="Me">
-                </div>
-            </div>
-
-            <div class="col right-col">
-                <h2 class="content-title">
-                    Oral Presentation
-                </h2>
-                <p>
-                    Observe: You can see melted clocks, a sea without waves, ants, a plate, a mountain, the sky, a tree
-                    on a specide of
-                    rectangular elevation and a kind of blanket.
-                    <br><br>
-                    Perceive: the perceptions obtained are: L of a rough, bitter, gloomy work, mystery, fear, unknown
-                    environment, anguish,
-                    loneliness.
-                    <br><br>
-                    Question: Why the melted clocks, what makes a blanket there, what the ants represent, why a sea
-                    without waves, why the
-                    tree is cut down?
-                    <br><br>
-                    Reflect: Melting clocks represent the time that passes differently. These clocks have different
-                    markings, as their
-                    pointers are melted and suggest a distorted notion of time.
-                    <br><br>
-                    Know: Salvador Dalí did not like ants very much and he used to use them as a symbol of putrefaction
-                    in his works. In the
-                    background a landscape that corresponds to some coastal cliffs of Catalonia
+                    I love guayasamin and all In his works, he vivifies his position with respect to humans and society,
+                    which are plagued by
+                    injustices, inequality, humiliation, poverty and forgetfulness for respect for indigenous roots,
+                    detachment from the ancestral past from which the Ecuadorian mestizo moved away. It also shows both
+                    suffering and human contradictions, as well as the will to seek light, exit, liberation.
                 </p>
             </div>
         </div>
@@ -160,7 +102,6 @@
         <a href="https://github.com/WashingtonYandun/Art-Human-Expression-Communication_Portfolio" target="_blank">Art
             Portfolio</a>
     </footer>
-
 </body>
 
 </html>
