fix wk 10 start making wk 11

--- a/w10.html
+++ b/w10.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PI_w4</title>
+    <title>PII_w10</title>
     <!-- script file -->
     <script src="js/script.js" defer></script>
     <!-- style file -->
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar__links">
             <a href="index.html">Home</a>
-            <a href="progress1.html">P.I</a>
+            <a href="progress2.html">P.II</a>
         </div>
     </header>
 
@@ -41,7 +41,7 @@
     <!-- act1 -->
     <section class="bio">
         <div class="bio__title">
-            <h2 class="title">Week 4</h2>
+            <h2 class="title">Week 10</h2>
         </div>
         <div class="bio__content">
 
