--- a/w11.html
+++ b/w11.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PI_w5</title>
+    <title>PII_w11</title>
     <!-- script file -->
     <script src="js/script.js" defer></script>
     <!-- style file -->
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar__links">
             <a href="index.html">Home</a>
-            <a href="progress1.html">P.I</a>
+            <a href="progress2.html">P.II</a>
         </div>
     </header>
 
@@ -54,11 +54,29 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Weekly Video Summary
+                    Questions
                 </h2>
                 <p>
-                    <br><br>
-                    the video of the week shows us the artistic appreciation of alejandro regarding paintings from the forest, as one of a dutch painter from the real, there are also quite a few bible paintings, where those paintings tell us some parts of the bible. It is also interesting how the other interlocutor tells us about some data about physics and the creation of the universe, since he is physical, so it is quite enriching to be able to listen to both points of view and opinions.
+                    What do we want to communicate with our creation?
+                    <br>
+                    We want to communicate love, nostalgia and gratitude.
+                    <br>
+                    Why did we choose that message?
+                    <br>
+                    we miss our mother
+                    <br>
+                    Why is it important?
+                    <br>
+                    Family is the most important thing in life
+                    <br>
+                    How are we doing it?
+                    <br>
+                    Currently we are writting the song and making the melody
+                    <br>
+                    How are we going to use the new artistic language and production
+                    strategies to reinforce that message?
+                    <br>
+                    We are making the lyrics with all our new artistic language and strategies
                     <br><br>
                 </p>
             </div>
@@ -77,12 +95,16 @@
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Creative Project Reflection
+                    Weekly Summary
                 </h2>
                 <p>
                     <br><br>
-                    At the moment we have already sealed the subject I quite like how the main sound we have prepared is going, although at the time of finishing the project we will have to edit it more and we will also have to add more sounds in conjunction with the photos that we have selected as a group.
-                    But, I think it is important to start using Adobe Rush in order to see what the final edition of the project would be like. We should also choose the sounds necessary for it.
+                    //amek
+                    At the moment we have already sealed the subject I quite like how the main sound we have prepared is
+                    going, although at the time of finishing the project we will have to edit it more and we will also
+                    have to add more sounds in conjunction with the photos that we have selected as a group.
+                    But, I think it is important to start using Adobe Rush in order to see what the final edition of the
+                    project would be like. We should also choose the sounds necessary for it.
                     <br><br>
                 </p>
             </div>
@@ -90,30 +112,33 @@
     </section>
 
 
-        <!-- act 3 -->
-        <section class="bio weeks">
-            <div class="bio__content">
-    
-                <div class="col left-col">
-                    <div class="bio__card">
-                        <img src="img/artdev/progress1/w5_soundImg.jpg" alt="Me">
-                    </div>
-                </div>
-    
-                <div class="col right-col">
-                    <h2 class="content-title">
-                        Opinion
-                    </h2>
-                    <p>
-                        Well, I think those videos were quite inspiring for me since I'm not used to seeing art that way so I think it's nice to be able to see the art of others and the opinion of others about a topic of interest to me, so taking I think the opinion of the interlocutors of the videos gave me a new direction to improve the selection of sounds and images to edit
-                    </p>
+    <!-- act 3 -->
+    <section class="bio weeks">
+        <div class="bio__content">
+
+            <div class="col left-col">
+                <div class="bio__card">
+                    <img src="img/artdev/progress1/w5_soundImg.jpg" alt="Me">
                 </div>
             </div>
-        </section>
+
+            <div class="col right-col">
+                <h2 class="content-title">
+                    In what ways can art become a voice for people and their different needs?
+                </h2>
+                <p>
+                    Art, over the centuries, has served as an instrument to express and sublimate the experience of
+                    human beings. However, today it takes on a meaning that many ignored, that of channeling pain and
+                    all those negative situations in order to heal and create something beautiful from it, this is
+                    something that he knows very well.
+                </p>
+            </div>
+        </div>
+    </section>
 
 
     <!-- act 4 -->
-       <section class="bio">
+    <section class="bio">
         <div class="bio__content">
             <div class="col left-col">
                 <div class="bio__card">
@@ -126,7 +151,8 @@
                     Project
                 </h2>
                 <p>
-                    finally we can present project 1 of the first part of the course, this excites me a lot since I have dedicated a lot of time to this.
+                    finally we can present project 1 of the first part of the course, this excites me a lot since I have
+                    dedicated a lot of time to this.
                 </p>
                 <a href="project1.html" class="btn">Watch The Project</a>
             </div>
