--- a/progress2.html
+++ b/progress2.html
@@ -112,21 +112,21 @@
 
         <div class="column">
             <a href="w11.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w5_summary.jpg" alt="videoSummary">
+                <img class="image__img" src="img/artdev/progress2/w11_song.jpeg" alt="song">
                 <div class="image__overlay">
                     <div class="image__title">11</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w11.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w5_soundImg.jpg" alt="sound">
+                <img class="image__img" src="img/artdev/progress2/w11_summary.jpeg" alt="summary">
                 <div class="image__overlay">
                     <div class="image__title">11</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w11.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w5_project.jpg" alt="project">
+                <img class="image__img" src="img/artdev/progress2/w11_needs.jpeg" alt="needs">
                 <div class="image__overlay">
                     <div class="image__title">11</div>
                     <p class="image__text">Wk</p>
