--- a/w11.html
+++ b/w11.html
@@ -48,7 +48,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w5_summary.jpg" alt="My head disorder">
+                    <img src="img/artdev/progress2/w11_song.jpeg" alt="song">
                 </div>
             </div>
 
@@ -89,7 +89,7 @@
         <div class="bio__content">
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w5_noise.jpeg" alt="noise">
+                    <img src="img/artdev/progress2/w11_summary.jpeg" alt="summary">
                 </div>
             </div>
 
@@ -99,13 +99,12 @@
                 </h2>
                 <p>
                     <br><br>
-                    //amek
-                    At the moment we have already sealed the subject I quite like how the main sound we have prepared is
-                    going, although at the time of finishing the project we will have to edit it more and we will also
-                    have to add more sounds in conjunction with the photos that we have selected as a group.
-                    But, I think it is important to start using Adobe Rush in order to see what the final edition of the
-                    project would be like. We should also choose the sounds necessary for it.
+                    This week we were able to learn about how religion, culture and art are closely related and how
+                    these can be a bridge not only between people but also between cultures.
                     <br><br>
+                    We can also see art as a
+                    tool capable of not only helping human beings but also saving them and getting them out of difficult
+                    situations.
                 </p>
             </div>
         </div>
@@ -118,7 +117,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w5_soundImg.jpg" alt="Me">
+                    <img src="img/artdev/progress2/w11_needs.jpeg" alt="needs hands">
                 </div>
             </div>
 
@@ -132,29 +131,6 @@
                     all those negative situations in order to heal and create something beautiful from it, this is
                     something that he knows very well.
                 </p>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- act 4 -->
-    <section class="bio">
-        <div class="bio__content">
-            <div class="col left-col">
-                <div class="bio__card">
-                    <img src="img/artdev/progress1/w5_project.jpg" alt="project">
-                </div>
-            </div>
-
-            <div class="col right-col">
-                <h2 class="content-title">
-                    Project
-                </h2>
-                <p>
-                    finally we can present project 1 of the first part of the course, this excites me a lot since I have
-                    dedicated a lot of time to this.
-                </p>
-                <a href="project1.html" class="btn">Watch The Project</a>
             </div>
         </div>
     </section>
