finish progress II

--- a/progress2.html
+++ b/progress2.html
@@ -136,21 +136,21 @@
 
         <div class="column">
             <a href="w12.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w6_expoSummary.jpeg" alt="kahlo">
+                <img class="image__img" src="img/artdev/progress2/w12_expo.jpeg" alt="firestone">
                 <div class="image__overlay">
                     <div class="image__title">12</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w6.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w6_progressSummary.jpeg" alt="japan">
+                <img class="image__img" src="img/artdev/progress2/w12_progress.jpeg" alt="generative art">
                 <div class="image__overlay">
                     <div class="image__title">12</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w12.html" class="image">
-                <img class="image__img" src="img/artdev/progress1/w6_videosSummary.jpeg" alt="art">
+                <img class="image__img" src="img/artdev/progress2/w12_summary.jpeg" alt="summary">
                 <div class="image__overlay">
                     <div class="image__title">12</div>
                     <p class="image__text">Wk</p>
