--- a/w12.html
+++ b/w12.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PI_w6</title>
+    <title>PII_w12</title>
     <!-- script file -->
     <script src="js/script.js" defer></script>
     <!-- style file -->
@@ -33,7 +33,7 @@
         </div>
         <div class="navbar__links">
             <a href="index.html">Home</a>
-            <a href="progress1.html">P.I</a>
+            <a href="progress2.html">P.II</a>
         </div>
     </header>
 
@@ -41,24 +41,33 @@
     <!-- act1 -->
     <section class="bio" id="bio">
         <div class="bio__title">
-            <h2 class="title">Week 6</h2>
+            <h2 class="title">Week 12</h2>
         </div>
 
         <div class="bio__content">
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w6_expoSummary.jpeg" alt="kahlo">
+                    <img src="img/artdev/progress2/w12_expo.jpeg" alt="firestone">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Expo Summary
+                    What did I learn about the work of the other groups?
                 </h2>
                 <p>
                     <br><br>
-                    Well, I really liked the works chosen by my friends, especially that of lovers. Although I could notice a special admiration or taste for the works of Frida Khalo. Personally, I don't like his works so much but I could see that my friends do. But thanks to his exhibitions I was able to analyze the works in a better way, as well as being able to make a deeper analysis of them. I really liked Van Gohg's starry night show, it is my favorite work of all history, I know it is not the most technical, but it reflects a lot for me and what I am, I love it.
+                    Well, I really liked the works done by my friends. Although I could
+                    notice a special taste for music in english wich is good.
+                    Personally, I like their
+                    works so much i love to listen music in english too.
+                    With the exhibitions I was able to
+                    analyze those songs and mine in a better way, as well as being able to make a deeper analysis of
+                    them. I really
+                    liked all songs. (But my group's was the best).
+                    I know it is not the most
+                    technical or worked song, but it reflects a lot from me and what I love.
                     <br><br>
                 </p>
             </div>
@@ -72,7 +81,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress1/w6_progressSummary.jpeg" alt="japan">
+                    <img src="img/artdev/progress2/w12_progress.jpeg" alt="Generative art">
                 </div>
             </div>
 
@@ -82,7 +91,13 @@
                 </h2>
                 <p>
                     <br><br>
-                    Well, this progress was quite nice for me because I was the first in college, so I was able to meet people from different ways of seeing things, and among those things is art, I really liked what is about the subject is very entertaining and It helps me to awaken that artistic side that I thought was asleep. It was incredible for me to even make this portfolio since I was able to test my artistic and technical skills in programming and in art.
+                    Well, this progress was niceier for me because I could do more work mith my friends and a song. I
+                    was able discover
+                    people who likes art as much as me, and among those things is art and music. I really liked what is
+                    going the subject is very entertaining and It helps me to awaken that artistic side of me that I
+                    thought
+                    was asleep. It was incredible for me to even improve this portfolio since I was able to grow up
+                    my artistic and programming skills.
                     <br><br>
                     Put this picture cause i love it.
                 </p>
@@ -106,14 +121,17 @@
                 </h2>
                 <p>
                     <br><br>
-                    Sarah Sze, is a contemporary visual artist who plays with her, we will be able to see the mixture of artistic languages ​​to create what she calls "multimedia landscapes".
-                    Where does the artist's work begin?
-                    It begin when the artist found a kind of inspiring sense. Like a prick. And also when teh situation is needed. 
-                    Where it goes?
-                    Goes towards the expression or the solution of something is a way of communicating with oneself
-                    what is it connected to?
-                    Is connected with the emotions, sensations, feelings and situations of each person
-                    <br><br>
+                    the technological development of the world is fundamental not only for the technical aspects but
+                    also for art and these two processes when using creative processes have a strong connection that
+                    makes them necessary for each other. It can also be said that thanks to the creative processes
+                    provided by art we can improve creative processes for things that are not very artistic.
+                    <br>
+                    What is the role of technology in art? Is it a benefit/advancement? Why?
+                    <br>
+                    I believe that art and technology go hand in hand cannot advance alone, they are needed. I also
+                    believe that technology is a fundamental piece of art. Before you could not use purple color because
+                    it is expensive and difficult to extract and now with an editing program we can fill a screen with
+                    purple. We don't even need pigment
                 </p>
             </div>
         </div>
