solve progress 3 bug

--- a/progress2.html
+++ b/progress2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P.I</title>
+    <title>P.II</title>
     <!-- script file -->
     <script src="js/script.js" defer></script>
     <!-- style file -->
@@ -34,7 +34,7 @@
         <div class="navbar__links">
             <a href="index.html">Home</a>
             <a href="progress1.html">P.I</a>
-            <a href="progress3.html">P.III</a>
+            <a href="progress2.html">P.II</a>
         </div>
     </header>
 
