change index links visualization

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         II
                     </h3>
                     <p>
-                        Progress I. 7 - 12 wk.
+                        Progress II. 7 - 12 wk.
                     </p>
                 </div>
             </a>
@@ -172,7 +172,7 @@
                         III
                     </h3>
                     <p>
-                        Progress I. 13 - 16 weeks.
+                        Progress III. 13 - 16 weeks.
                     </p>
                 </div>
             </a>
