add progress 3, w13 images

--- a/progress3.html
+++ b/progress3.html
@@ -43,14 +43,14 @@
     <div class="gallery-row">
         <div class="column">
             <a href="w7.html" class="image">
-                <img class="image__img" src="img/artdev/progress2/w7_banana_age.jpeg" alt="banana">
+                <img class="image__img" src="img/artdev/progress3/w13_video.jpeg" alt="video">
                 <div class="image__overlay">
                     <div class="image__title">13</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w7.html" class="image">
-                <img class="image__img" src="img/artdev/progress2/w7_summary.jpeg" alt="black people">
+                <img class="image__img" src="img/artdev/progress3/w13_questions.jpeg" alt="questions">
                 <div class="image__overlay">
                     <div class="image__title">13</div>
                     <p class="image__text">Wk</p>
@@ -94,14 +94,14 @@
 
         <div class="column">
             <a href="w10.html" class="image">
-                <img class="image__img" src="img/artdev/progress2/w10_summary.jpeg" alt="videoSummary">
+                <img class="image__img" src="img/artdev/progress3/w13_video.jpeg" alt="videoSummary">
                 <div class="image__overlay">
                     <div class="image__title">16</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
             <a href="w10.html" class="image">
-                <img class="image__img" src="img/artdev/progress2/w10_guayasamin.jpeg" alt="el dictador">
+                <img class="image__img" src="img/artdev/progress3/w13_questions.jpeg" alt="dj">
                 <div class="image__overlay">
                     <div class="image__title">16</div>
                     <p class="image__text">Wk</p>
