--- a/w13.html
+++ b/w13.html
@@ -76,7 +76,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress2/w9_summary.jpeg" alt="black">
+                    <img src="img/artdev/progress3/w13_video.jpeg" alt="yellow">
                 </div>
             </div>
 
@@ -105,7 +105,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress2/w9_revo.jpeg" alt="revo">
+                    <img src="img/artdev/progress3/w13_questions.jpeg" alt="revo">
                 </div>
             </div>
 
@@ -133,7 +133,6 @@
             Art Portfolio
         </a>
     </footer>
-
 </body>
 
 </html>
